Bug Fix: Name overflow

--- a/src/components/modal/balances/balances.css
+++ b/src/components/modal/balances/balances.css
@@ -53,6 +53,9 @@
 
 .qr-title-name {
     color: var(--colour-coral-blue);
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+    width: 70%;
 }
 
 .qr-address {
